k8s/gsn-relayer.namespace.yml
# gsn-relayer.namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
   name: gsn-relayer
---
