k8s/gsn-relayer.deployment.yml
# gsn-relayer.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gsn-relayer
  name: gsn-relayer
  labels:
    app: gsn-relayer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gsn-relayer
  template:
    metadata:
      labels:
        app: gsn-relayer
    spec:
      containers:
      - name: gsn-relayer
        image: gjeanmart/gsn-relayer-arm #dmihal/gsn-relay-xdai
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /app/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: gsn-relayer-ssd
---
