k8s/gsn-relayer.ingress.yml
# gsn-relayer.ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: gsn-relayer
  name: gsn-relayer-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - gsn.jeanmart.me
    secretName: gsn-jeanmart-me-prod-tls
  rules:
  - host: gsn.jeanmart.me
    http:
      paths:
        - path: /
          backend:
            serviceName: gsn-relayer
            servicePort: 80
---
